# moonweb

./: .gitignore  Cargo.toml  README.md  script.sh  server-config.json  server.config  server.template.config  tailwind.config.js
client/: Cargo.toml  Dioxus.toml
client/public/: manifest.json.br  sw.js.br
client/src/: authorization.rs  lib.rs  web.rs  web_state.rs
config/: server-config.json  server.template.config
models/flux/: Cargo.toml
models/llava/src/: test.py
models/pyworker/src/: qwen2.py
models/qwen/: Cargo.toml  requirements.txt  test-qwen.py
models/qwen/src/: main.rs
notes/: TODO.md
public/: login.js.br  tailwind.css.br
script/: build.sh  check_installation.py  run.sh  setup.sh
server/: Cargo.toml
server/src/: lib.rs  master_server.rs  master_state.rs  model.rs  phi3.rs  worker_server.rs
src/: data.rs  ipc.rs  lib.rs  llama.rs  main.rs  master_server.rs  master_state.rs  phi3.rs  token_output_stream.rs  worker_server.rs
tmp/: subdependencies.txt
