[package]
name = "qwen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moonweb = { path = "../../" }
candle-transformers = { version = "0.7.2", features = ["cuda"] }
candle-core = { version = "0.7.2", features = ["cuda"] }
candle-nn = { version = "0.7.2", features = ["cuda"] }
tokenizers = { version = "0.19.1", features = ["onig"] }

half = { optional = true }
hf-hub = { features = ["tokio"] }
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
